# Strava_client

./: .gitignore  Caddyfile  api.Dockerfile  auto-canceling.toml  config.conf  docker-compose.yaml  frontend.Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts
api/: Cargo.toml
api/src/: crawler.rs  db_client.rs  db_manager.rs  main.rs  utilities.rs
src/: App.svelte  ambient.d.ts  app.css  app.html  hooks.server.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_orders_canceling.rs  data_struct.rs  lib.rs  main.rs  request_builder.rs  strava_client.rs  strava_scraper.rs  users_actions_handler.rs
src/lib/: Alert.svelte  BlackList.svelte  BlackListMenu.svelte  DailyMenu.svelte  Error.svelte  Login.svelte  Menu.svelte  Navbar.svelte  Settings.svelte  TauriComunicationLayer.ts  WebComunicationLayer.ts
src/routes/: +layout.ts  +page.svelte
src/routes/nastaveni/: +page.svelte
src/routes/objednavky/: +page.svelte
src/routes/uwu/: +page.svelte
strava-client/: Cargo.toml
strava-client/src/: automatic_client.rs  data_struct.rs  lib.rs  request_builder.rs  strava_client.rs  strava_scraper.rs
userdata/: username.toml
