[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-session ={ version ="0.8.0", features = ["cookie-session"]}
actix-cors = "0.6.1"
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  
tokio = { version = "1.0", features = ["full"] }
strava-client = {path = "../strava-client"}
dotenv = "0.15.0"
reqwest = { version = "0.11.4", features = ["json","cookies", "gzip", "deflate"] }
indexmap = "2.1.0"
bson = "2.8.1"
futures-util = "0.3.17"

